# http-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh
src/: Common.hpp  HttpMethod.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpServer.cpp  HttpServer.h  HttpServer.hpp  HttpStatus.h  HttpStatus.hpp  HttpVersion.hpp  Request.cpp  Request.h  Response.cpp  Response.h  String.hpp  WebSocket.cpp  WebSocket.hpp
src-examples/: CMakeLists.txt  http.cpp
src-test/: http.cpp  https.cpp
src/util/: Base64.cpp  Base64.hpp  HttpMethod.hpp  HttpStatus.hpp  HttpVersion.hpp  MimeType.hpp
